--- a/Margherita.Ionic/src/pages/login/login.html
+++ b/Margherita.Ionic/src/pages/login/login.html
@@ -1,15 +1,44 @@
-<!--
-  Generated template for the LoginPage page.
+<ion-content no-padding>
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-  <ion-navbar>
-    <ion-title>login</ion-title>
-  </ion-navbar>
-</ion-header>
+  <div class="red">
 
-<ion-content padding>
-   <button ion-button block (click)="abrirCategoria()">Efetuar Login</button>
+    <div class="logo">
+      <img src="/assets/imgs/icon-branco.png" alt="">
+      <span>Margherita</span>
+    </div>
+
+    <ion-list no-lines>
+      <ion-item>
+        <ion-input type="text" placeholder="E-mail"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-input type="password" placeholder="Senha"></ion-input>
+      </ion-item>
+    </ion-list>
+
+    <ion-grid>
+      <ion-row>
+        <button ion-button color="secondary" block round (click)="abrirCategoria()">
+          Efetuar Login
+        </button>
+      </ion-row>
+    </ion-grid>
+
+    <ion-grid>
+      <ion-row>
+        <button ion-button block outline round color="secondary">
+          Cadastrar-se
+        </button>
+      </ion-row>
+    </ion-grid>
+
+    <ion-grid>
+      <ion-row>
+        <button ion-button clear block color="light">
+          Administrar Cadastros
+        </button>
+      </ion-row>
+    </ion-grid>
+  </div>
 </ion-content>
