--- a/Margherita.Ionic/src/pages/login/login.html
+++ b/Margherita.Ionic/src/pages/login/login.html
@@ -1,25 +1,23 @@
-<ion-content no-padding>
+<ion-content padding>
 
-  <div class="red">
-
-    <div class="logo">
-      <img src="/assets/imgs/icon-branco.png" alt="">
-      <span>Margherita</span>
-    </div>
+     <div class="logo">
+        <img src="/assets/imgs/icon-branco.png" alt="">
+        <span>Margherita</span>
+      </div>
 
     <ion-list no-lines>
       <ion-item>
-        <ion-input type="text" placeholder="E-mail"></ion-input>
+        <ion-input [(ngModel)]="form.email" type="text" placeholder="E-mail"></ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-input type="password" placeholder="Senha"></ion-input>
+        <ion-input [(ngModel)]="form.senha" type="password" placeholder="Senha"></ion-input>
       </ion-item>
     </ion-list>
 
     <ion-grid>
       <ion-row>
-        <button ion-button color="secondary" block round (click)="abrirCategoria()">
+        <button ion-button color="secondary" block round (click)="login()">
           Efetuar Login
         </button>
       </ion-row>
@@ -40,5 +38,5 @@
         </button>
       </ion-row>
     </ion-grid>
-  </div>
-</ion-content>
+    
+  </ion-content>
