--- a/Margherita.Ionic/src/pages/login/login.html
+++ b/Margherita.Ionic/src/pages/login/login.html
@@ -1,11 +1,11 @@
-<ion-content padding>
+<ion-content padding class="backImage">
 
      <div class="logo">
         <img src="/assets/imgs/icon-branco.png" alt="">
         <span>Margherita</span>
       </div>
 
-    <ion-list no-lines>
+    <ion-list no-lines class="list-transparent">
       <ion-item>
         <ion-input [(ngModel)]="form.email" type="text" placeholder="E-mail"></ion-input>
       </ion-item>
@@ -25,7 +25,7 @@
 
     <ion-grid>
       <ion-row>
-        <button ion-button block outline round color="secondary">
+        <button ion-button block outline round color="secondary" (click)="cadastrar()">
           Cadastrar-se
         </button>
       </ion-row>
