--- a/Margherita.Ionic/src/pages/carrinho/carrinho.html
+++ b/Margherita.Ionic/src/pages/carrinho/carrinho.html
@@ -1,28 +1,28 @@
 <ion-header>
-  <ion-navbar color="primary">
-    <ion-title>Carrinho de Compras</ion-title>
-  </ion-navbar>
-</ion-header>
-<ion-content no-padding>
-  <div class="valor">
-    <h2>{{ totalProdutos | real }}</h2>
-    <small>seu pedido atual</small>
-  </div>
-  <div class="botao-finalizar">
-    <div class="botao" tappable>
-      Finalizar Pedido
+    <ion-navbar color="primary">
+      <ion-title>Carrinho de Compras</ion-title>
+    </ion-navbar>
+  </ion-header>
+  <ion-content no-padding>
+    <div class="valor">
+      <h2>{{ carrinho.valorTotal | real }}</h2>
+      <small>seu pedido atual</small>
     </div>
-  </div>
-  <div class="produtos">
-    <div class="produto" *ngFor="let item of produtos" (click)="visualizarProduto(item)" tappable>
-      <div class="imagem" [ngStyle]="{'background-image': 'url(' + item.foto + ')'}"></div>
-      <div class="titulo">{{item.nome}}</div>
-      <div class="descricao">{{item.descricao}}</div>
-      <div class="preco">{{item.preco | real}}</div>
-      <div class="quantidade">
-        <quantidade (quantidadeAlterada)="quantidadeAlterada(item, $event)"></quantidade>
+    <div class="botao-finalizar">
+      <div class="botao" tappable (click)="finalizarPedido()">
+        Finalizar Pedido
       </div>
     </div>
-  </div>
-</ion-content>
-<tab [pagina]="''"></tab>
+    <div class="produtos">
+      <div class="produto" *ngFor="let item of carrinho.itens" tappable>
+        <div class="imagem" [ngStyle]="{'background-image': 'url(' + item.Produto.foto + ')'}"></div>
+        <div class="titulo">{{item.Produto.nome}}</div>
+        <div class="descricao">{{item.Produto.descricao}}</div>
+        <div class="preco">{{item.Produto.preco | real}}</div>
+        <div class="quantidade">
+          <quantidade [produto]="item.Produto"  (quantidadeAlterada)="quantidadeAlterada(item.Produto, $event)"></quantidade>
+        </div>
+      </div>
+    </div>
+  </ion-content>
+  <tab [pagina]="''"></tab>
