--- a/Margherita.Ionic/src/pages/minha-conta/minha-conta.html
+++ b/Margherita.Ionic/src/pages/minha-conta/minha-conta.html
@@ -12,10 +12,10 @@
 
     <div class="botao">
       <button ion-button outline color="primary" round block (click)="salvar()">
-        Salvar os dados
+        Salvar os dados e Sair
       </button>
     </div>
-
+        
   </div>
 </ion-content>
 <tab [pagina]="'Minha Conta'"></tab>
