--- a/Margherita.Ionic/src/pages/categoria/categoria.html
+++ b/Margherita.Ionic/src/pages/categoria/categoria.html
@@ -1,6 +1,6 @@
 <ion-content no-padding>
   <div class="admin">
-    <button ion-button icon-only clear color="#00008B" (click)="adminOptions()">
+    <button ion-button icon-only clear color="light" (click)="adminOptions()">
       <ion-icon name="settings"></ion-icon>
     </button>
   </div>
