--- a/Margherita.Ionic/src/pages/minha-conta/minha-conta.html
+++ b/Margherita.Ionic/src/pages/minha-conta/minha-conta.html
@@ -12,7 +12,7 @@
 
     <div class="botao">
       <button ion-button outline color="primary" round block (click)="salvar()">
-        Salvar os dados e Sair
+        Salvar os dados
       </button>
     </div>
         
