--- a/Margherita.Ionic/src/pages/categoria/categoria.html
+++ b/Margherita.Ionic/src/pages/categoria/categoria.html
@@ -1,6 +1,7 @@
 <ion-content no-padding>
   <div class="admin">
     <button ion-button icon-only clear color="light" (click)="adminOptions()">
+      <p>Sair</p>
       <ion-icon name="settings"></ion-icon>
     </button>
   </div>
