--- a/Margherita.Ionic/src/pages/minha-conta/minha-conta.html
+++ b/Margherita.Ionic/src/pages/minha-conta/minha-conta.html
@@ -8,7 +8,7 @@
 
     <input type="text" placeholder="Nome" [(ngModel)]="usuarioLogado.nome">
     <input type="text" placeholder="Email" [(ngModel)]="usuarioLogado.email">
-    <input type="number" placeholder="Telefone" [(ngModel)]="usuarioLogado.telefone">
+    <input type="number" placeholder="" [(ngModel)]="usuarioLogado.telefone">
 
     <div class="botao">
       <button ion-button outline color="primary" round block (click)="salvar()">
